Started with directives

--- a/ProjectX/WebContent/index.html
+++ b/ProjectX/WebContent/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ProjectX">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="utf-8">
+<title>ProjectX</title>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/angular.min.js"></script>
+<script type="text/javascript" src="js/ProjectX.js"></script>
+<script type="text/javascript" src="js/Building.js"></script>
 </head>
 <body>
-hej hå
-</body>
+	<div class="container-fluid" id="container">
+	<h1>ProjectX</h1>
+	<ul class="nav nav-tabs">
+		<li role="presentation" class="active"> <a href="#building" data-toggle="tab" > Byggnad</a></li>
+		</ul>
+		<div class="tab-content">
+			<div class="tab-pane fade in active" id="building">
+			
+			</div>
+		
+		</div>
+	
+	
+	</div>
+	
+</body>	
 </html>
