--- a/ProjectX/WebContent/index.html
+++ b/ProjectX/WebContent/index.html
@@ -8,8 +8,9 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/ProjectX.js"></script>
-<script type="text/javascript" src="js/Building.js"></script>
+<script type="text/javascript" src="js/building.js"></script>
 <script type="text/javascript" src="js/refurbishment.js"></script>
+<script type="text/javascript" src="js/result.js"></script>
 </head>
 <body>
 	<div class="container-fluid" id="container">
@@ -17,6 +18,7 @@
 	<ul class="nav nav-tabs">
 		<li role="presentation" class="active"> <a href="#building" data-toggle="tab" > Byggnad</a></li>
 		<li role="presentation"> <a href="#refurbishment" data-toggle="tab">Åtgärd</a></li>
+		<li role="presentation"> <a href="#result" data-toggle="tab">Resultat</a></li>
 		</ul>
 		<div class="tab-content">
 			<div class="tab-pane fade in active"  id="building">
@@ -25,6 +27,9 @@
 			</div>
 		<div class="tab-pane fade" id="refurbishment">
 		<refurbishment/>
+		</div>
+		<div class="tab-pane fade" id="result">
+		<result/>
 		</div>
 		</div>
 	
