--- a/ProjectX/WebContent/index.html
+++ b/ProjectX/WebContent/index.html
@@ -18,7 +18,7 @@
 	<ul class="nav nav-tabs">
 		<li role="presentation" class="active"> <a href="#building" data-toggle="tab" > Byggnad</a></li>
 		<li role="presentation"> <a href="#refurbishment" data-toggle="tab">Åtgärd</a></li>
-		<li role="presentation"> <a href="#result" data-toggle="tab">Resultat</a></li>
+		<li role="presentation"> <a href="#result" data-toggle="tab" ng-click="getResult()">Resultat</a></li>
 		</ul>
 		<div class="tab-content">
 			<div class="tab-pane fade in active"  id="building" >
